--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -30,8 +30,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: project/techtrends
-          file: project/techtrends/Dokerfile
+          context: .
+          file: ./Dockerfile
           platforms: linux/amd64
           push: true
           tags: barhome/techtrends:latest
